--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -32,10 +32,10 @@
     width: 48px;
     height: 48px;
     border: 0;
-    background-image: url('https://cdn-uicons.flaticon.com/2.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css');
-    background-size: 40%;
-    background-repeat: no-repeat;
-    background-position: center;
+    /* background-image: url('https://cdn-uicons.flaticon.com/2.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'); */
+    /* background-size: 40%; */
+    /* background-repeat: no-repeat; */
+    /* background-position: center; */
     opacity: 0.6;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
@@ -46,7 +46,7 @@
     opacity: 1;
 }
 
-.searchForm_button_label {
+/* .searchForm_button_label {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -56,7 +56,7 @@
     white-space: nowrap;
     clip-path: inset(50%);
     border: 0;
-}
+} */
 
 .searchForm_input {
     display: inline-block;
@@ -72,4 +72,9 @@
 .searchForm_input::placeholder {
     font: inherit;
     font-size: 18px;
+}
+
+.icon {
+fill: black;
+display: block;
 }
